[package]
name = "tracer-log"
version = "0.1.0"
authors = ["CWM"]
edition = "2018"

[dependencies]

tokio-modbus = { version = "*" }
futures = { version = "0.3", optional = true }
futures-util = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["rt-core"] }
tokio-util = { version = "0.2", features = ["codec"] }
tokio-serial = { version = "4.3.3", optional = true, default-features = false }
chrono = "0.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["tcp", "macros", "io-util"] }

[features]
default = ["rtu", "sync"]
rtu = ["tokio-serial", "futures-util/sink"]
tcp = ["tokio/net", "futures-util/sink"]
sync = []
